--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  palette_generator:
+  
 
 
   # The following adds the Cupertino Icons font to your application.
